--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,6 @@ body {
     color: #ffffff;
     background: url('assets/fondo.jpg') no-repeat center center/cover;
     overflow: hidden;
-    /**
-    linear-gradient(135deg, 
-        rgba(34, 139, 34, 0.7) 25%,   /* Verde oscuro con opacidad */
-       /* rgba(220, 20, 60, 0.7) 50%,  /* Rojo cereza con opacidad */
-      /*  rgba(255, 223, 186, 0.7) 75% /* Dorado claro */
-    
-    /*);*/
-    
 }
 
 h1 {
@@ -79,14 +71,14 @@ input:focus {
     z-index: 10;
 }
 
-.images-container h2 {
+#images-container h2 {
     font-size: 30px;
     color: #ffffff;
     margin-bottom: 20px;
     text-align: center;
 }
 
-.images-container {
+#images-container {
     text-align: center;
     margin-top: 50px;
     z-index: 1;
@@ -99,7 +91,50 @@ input:focus {
     margin: 40px auto;
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    animation: pump 1.5s infinite;  /* Aplicar la animación */
 }
+
+/* Animación de bombeo */
+@keyframes pump {
+    0% {
+        transform: scale(1);  /* Tamaño original */
+    }
+    30% {
+        transform: scale(1.02);  /* Aumento de tamaño */
+    }
+    50% {
+        transform: scale(1);  /* Vuelve al tamaño original */
+    }
+    70% {
+        transform: scale(1.02);  /* Aumento de tamaño */
+    }
+    100% {
+        transform: scale(1);  /* Tamaño original */
+    }
+}
+
+  
+  #countdown-screen #countdown {
+    font-size: 12em;
+    font-weight: bold;
+    color: #FF5C8D;  /* Color llamativo para el número de la cuenta atrás */
+    margin-top: 20px;
+    text-shadow: 4px 4px 10px rgba(0, 0, 0, 0.7);
+    animation: countdown-animation 1s ease-in-out infinite;
+  }
+  
+  /* Animación de la cuenta atrás */
+  @keyframes countdown-animation {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.1);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
 
 .image.show {
     opacity: 1;
