--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.8); 
     background-size: cover;
     margin: 0;
-    overflow: hidden; /* Evita el desbordamiento horizontal */
+    overflow-x: hidden; /* Evita el desbordamiento horizontal */
 }
 
 h1 {
