--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,15 @@ body {
     text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.8); 
     background-size: cover;
     margin: 0;
-    overflow-x: hidden; /* Evita el desbordamiento horizontal */
+    overflow-x: hidden;
+}
+
+html::-webkit-scrollbar {
+    display: none;
+}
+  
+body::-webkit-scrollbar {
+    display: none;
 }
 
 h1 {
